# Time_MCP_Python

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  LICENSE  Procfile  README.md  app.json  docker-compose.yml  koyeb.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.sh
.github/workflows/: ci-cd.yml
tests/: __init__.py  test_standalone.py
time_mcp_server/: __init__.py  __main__.py  http_server.py  main.py  server.py  standalone.py
